src/objects/CNS_Payment__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to stored the url and keys for CNS CyberSource integration</description>
    <fields>
        <fullName>PROD_AccessKey__c</fullName>
        <label>PROD AccessKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_ProfileId__c</fullName>
        <label>PROD ProfileId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_SecurityKey_2__c</fullName>
        <label>PROD SecurityKey 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_SecurityKey__c</fullName>
        <label>PROD SecurityKey</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_URL__c</fullName>
        <label>PROD URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_AccessKey__c</fullName>
        <label>QA AccessKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_ProfileId__c</fullName>
        <label>QA ProfileId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_SecurityKey_2__c</fullName>
        <label>QA SecurityKey 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_SecurityKey__c</fullName>
        <label>QA SecurityKey</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_URL__c</fullName>
        <label>QA URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CNS Payment</label>
</CustomObject>